--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,12 +1,13 @@
 footer {
   padding: 2rem;
-  background-color: var(--light-color);
+  background-color: var(--background-color);
   font-size: var(--body-font-size-s);
 }
 
 footer .footer {
   max-width: 1200px;
   margin: auto;
+  text-align: center;
 }
 
 footer .footer p {
