--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,8 +12,8 @@
 
 :root {
   /* colors */
-  --link-color: #035fe6;
-  --link-hover-color: #136ff6;
+  --link-color: #164863;
+  --link-hover-color: #427D9D;
   --background-color: white;
   --light-color: #eee;
   --dark-color: #ccc;
